version 1.2.3
- Fix bug: genr was broken for some special cases of
  repeated function calls
- Fix bug: normal pvalues were being shown as zero for
  large |z-scores| > 9.0
- Fix bug: the NIST checker plugin was broken for locales
  that use ',' as decimal point  
- Daily data: construct a special plotting variable so
  daily time-series can be graphed better; also allow
  for 4-digit years in daily dates (YYYY/MM/DD) on input;
  also fix "genr" so that dummies can be constructed
  as in "genr dum = t < 1987:10:19" (note that the
  slashes must be replaced by colons in this context)
- Text objects: in scripts and the gui console, many
  commands can now have their output diverted to a saved
  object (e.g. "ADF <- adf 1 Ct").  As with models and
  graphs, these objects appear in the Session icon
  window, and they can be displayed and freed using
  objectname.show, objectname.free
- Make the model table available via script and gui
  console (new command "modeltab")
- Add an OLS option, "-r" or "--robust", which calls for
  the use of White's robust standard errors (HC0) in the
  case of cross-sectional data, or HAC in the case of time
  series data
- Fix bug: latent problems when adding an observation to
  the working dataset
- Fix bug: set the frequency and starting observation could
  fail when the local decimal point is not '.'
- Fix: make the genr functions "coeff()", "stderr()" and 
  "vcv()" work to retrieve statistics from ARMA models

2/2/2004 version 1.2.2
- Make AIC retrievable via genr ("genr foo = $aic")
- Fix brokenness in RTF printing/copying of ARMA models
- Add calculation of modulus and frequency for ARMA roots,
  and add printing of these to LaTeX and RTF output
- Fix bug in accessing critical values of F (Utilities menu)
- Add DFFITS values to the "influential observations" model
  test; also expand the help entry for this
- Add a little explanation of Johansen cointegration test
  results to GUI helpfile